Frontend estable sin carrito de compras

--- a/views/productos/Index.cshtml
+++ b/views/productos/Index.cshtml
@@ -78,10 +78,14 @@
                         <td>
                             @Html.DisplayFor(modelItem => item.Titulo)<br />
                             <span class="text-secondary-emphasis small d-none d-md-block">@Html.DisplayFor(modelItem => item.Descripcion)</span><br />
-                            @foreach (var cat in item.Categorias!)
-                            {
-                                <span class="badge rounded-pill text-bg-secondary">@cat.Nombre</span>
-                            }
+                            @if (item.Categorias != null && item.Categorias.Any())
+{
+    foreach (var cat in item.Categorias)
+    {
+        <span class="badge rounded-pill text-bg-secondary">@cat.Nombre</span> //se modificó esta parte
+    }
+}
+
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Precio)
