--- a/views/comprar/_CardPartial.cshtml
+++ b/views/comprar/_CardPartial.cshtml
@@ -3,8 +3,8 @@
 <div class="card h-100">
     <div class="card-header text-center bg-white pt-3">
         <img src="@(Model.ArchivoId == null ? 
-            "https://placehold.co/300x200/FFF/999?text=Artículo" : 
-            $"{ViewBag.Url}/api/archivos/{Model.ArchivoId}")"
+            Url.Content("~/images/imagen-no-disponible.jpg") 
+            : $"{ViewBag.Url}/api/archivos/{Model.ArchivoId}")"
             alt="@Model.Titulo" class="img-fluid d-ui" data-ui="@ViewBag.Url"
             style="max-height: 200px; width: fit-content;" />
     </div>
