--- a/views/productos/Index.cshtml
+++ b/views/productos/Index.cshtml
@@ -72,7 +72,7 @@
                             @Html.DisplayFor(modelItem => item.ProductoId)
                         </td>
                         <td class="text-center" width="1">
-                            <img src="@(item.ArchivoId == null ? "https://via.placeholder.com/27x40" : $"{ViewBag.Url}/api/archivos/{item.ArchivoId}")"
+                            <img src="@(item.ArchivoId == null ? Url.Content("~/images/imagen-no-disponible.jpg")  : $"{ViewBag.Url}/api/archivos/{item.ArchivoId}")"
                                  alt="@item.Titulo" class="img-fluid img-thumbnail" style="max-height: 40px;">
                         </td>
                         <td>
