--- a/views/productos/_CardPartial.cshtml
+++ b/views/productos/_CardPartial.cshtml
@@ -4,7 +4,7 @@
     <div class="row g-0">
         <div class="col-md-4 text-center bg-white pt-3">
             <img src='@(Model.ArchivoId == null ? 
-                "https://placehold.co/300x450/FFF/999?text=Artículo" : 
+                Url.Content("~/images/imagen-no-disponible.jpg")  : 
                 $"{ViewBag.Url}/api/archivos/{Model.ArchivoId}")'
                 alt="@Model.Titulo" class="portada img-fluid" data-url="@ViewBag.Url"
                 style="max-height: 300px;" />
